Fix build.gradle.kts (#67)
* Fix Exploits

* Fix build.gradle.kts